--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
     "nodemon": "^1.9.1"
   },
   "devDependencies": {
